--- a/environment.yml
+++ b/environment.yml
@@ -166,6 +166,8 @@ dependencies:
     - alabaster==0.7.12
     - babel==2.9.0
     - causeinfer==0.1.0
+    - check-wheel-contents==0.2.0
+    - humanfriendly==9.1
     - imagesize==1.2.0
     - ipython==7.10.0
     - jupyter-contrib-core==0.3.3
@@ -173,7 +175,8 @@ dependencies:
     - jupyter-highlight-selected-word==0.2.0
     - jupyter-latex-envs==1.4.6
     - jupyter-nbextensions-configurator==0.4.1
-    - lxml==4.6.2
+    - lxml==4.6.3
+    - property-manager==3.0
     - pyyaml==5.4.1
     - snowballstemmer==2.1.0
     - sphinx==3.5.1
@@ -184,3 +187,5 @@ dependencies:
     - sphinxcontrib-jsmath==1.0.1
     - sphinxcontrib-qthelp==1.0.3
     - sphinxcontrib-serializinghtml==1.1.4
+    - verboselogs==1.7
+    - wheel-filename==1.3.0
