--- a/requirements.txt
+++ b/requirements.txt
@@ -9,10 +9,11 @@ backcall==0.2.0
 black==19.10b0
 bleach==3.3.0
 brotlipy==0.7.0
-causeinfer==0.1.0
+causeinfer==0.1.1.4
 certifi==2020.12.5
 cffi==1.14.4
 chardet==4.0.0
+check-wheel-contents==0.2.0
 click==7.1.2
 cmarkgfm==0.4.2
 colorama==0.4.4
@@ -24,6 +25,7 @@ defusedxml==0.6.0
 docutils==0.16
 entrypoints==0.3
 future==0.18.2
+humanfriendly==9.1
 idna==2.10
 imagesize==1.2.0
 importlib-metadata==2.0.0
@@ -49,7 +51,7 @@ jupyterlab-pygments==0.1.2
 jupyterlab-widgets==1.0.0
 keyring==22.0.1
 kiwisolver==1.3.1
-lxml==4.6.2
+lxml==4.6.3
 MarkupSafe==1.1.1
 matplotlib==3.3.2
 mistune==0.8.4
@@ -74,12 +76,13 @@ pathspec==0.7.0
 patsy==0.5.1
 pexpect==4.8.0
 pickleshare==0.7.5
-Pillow==8.1.1
+Pillow==8.1.0
 pip==20.3.3
 pkginfo==1.7.0
 pluggy==0.13.1
 prometheus-client==0.9.0
 prompt-toolkit==3.0.8
+property-manager==3.0
 ptyprocess==0.7.0
 py==1.10.0
 pycparser==2.20
@@ -129,8 +132,10 @@ twine==3.3.0
 typed-ast==1.4.2
 typing-extensions==3.7.4.3
 urllib3==1.26.3
+verboselogs==1.7
 wcwidth==0.2.5
 webencodings==0.5.1
 wheel==0.36.2
+wheel-filename==1.3.0
 widgetsnbextension==3.5.1
 zipp==3.4.0
