--- a/environment.yml
+++ b/environment.yml
@@ -21,19 +21,19 @@ dependencies:
   - click=7.1.2
   - cmarkgfm=0.4.2
   - colorama=0.4.4
-  - coverage=5.4
+  - coverage=5.5
   - cryptography=3.4.4
   - cycler=0.10.0
   - dbus=1.13.18
   - decorator=4.4.2
-  - defusedxml=0.6.0
+  - defusedxml=0.7.1
   - docutils=0.16
   - entrypoints=0.3
-  - expat=2.2.10
+  - expat=2.3.0
   - freetype=2.10.4
   - future=0.18.2
   - gettext=0.19.8.1
-  - glib=2.67.4
+  - glib=2.68.0
   - icu=58.2
   - idna=2.10
   - importlib-metadata=2.0.0
@@ -50,11 +50,11 @@ dependencies:
   - jsonschema=3.2.0
   - jupyter=1.0.0
   - jupyter_client=6.1.7
-  - jupyter_console=6.2.0
+  - jupyter_console=6.3.0
   - jupyter_core=4.7.1
   - jupyterlab_pygments=0.1.2
   - jupyterlab_widgets=1.0.0
-  - keyring=22.0.1
+  - keyring=22.3.0
   - kiwisolver=1.3.1
   - lcms2=2.11
   - libcxx=10.0.0
@@ -78,19 +78,19 @@ dependencies:
   - more-itertools=8.6.0
   - mypy_extensions=0.4.3
   - nb_conda_kernels=2.3.1
-  - nbclient=0.5.2
+  - nbclient=0.5.3
   - nbconvert=6.0.7
   - nbformat=5.1.2
   - ncurses=6.2
   - nest-asyncio=1.5.1
-  - notebook=6.2.0
+  - notebook=6.3.0
   - numpy=1.19.2
   - numpy-base=1.19.2
   - olefile=0.46
-  - openssl=1.1.1j
+  - openssl=1.1.1k
   - packaging=20.9
   - pandas=1.2.1
-  - pandoc=2.11
+  - pandoc=2.12
   - pandocfilters=1.4.3
   - parso=0.7.0
   - pathspec=0.7.0
@@ -98,17 +98,17 @@ dependencies:
   - pcre=8.44
   - pexpect=4.8.0
   - pickleshare=0.7.5
-  - pillow=8.1.0
+  - pillow=8.1.2
   - pip=20.3.3
   - pkginfo=1.7.0
   - pluggy=0.13.1
   - prometheus_client=0.9.0
-  - prompt-toolkit=3.0.8
-  - prompt_toolkit=3.0.8
+  - prompt-toolkit=3.0.17
+  - prompt_toolkit=3.0.17
   - ptyprocess=0.7.0
   - py=1.10.0
   - pycparser=2.20
-  - pygments=2.8.0
+  - pygments=2.8.1
   - pyopenssl=20.0.1
   - pyparsing=2.4.7
   - pyqt=5.9.2
@@ -122,7 +122,7 @@ dependencies:
   - pytz=2021.1
   - pyzmq=20.0.0
   - qt=5.9.7
-  - qtconsole=5.0.2
+  - qtconsole=5.0.3
   - qtpy=1.9.0
   - readline=8.1
   - readme_renderer=24.0
@@ -139,9 +139,9 @@ dependencies:
   - sip=4.19.8
   - six=1.15.0
   - sqlite=3.33.0
-  - statsmodels=0.12.0
+  - statsmodels=0.12.2
   - tabulate=0.8.9
-  - terminado=0.9.2
+  - terminado=0.9.3
   - testpath=0.4.4
   - threadpoolctl=2.1.0
   - tk=8.6.10
@@ -158,7 +158,7 @@ dependencies:
   - wheel=0.36.2
   - widgetsnbextension=3.5.1
   - xz=5.2.5
-  - zeromq=4.3.3
+  - zeromq=4.3.4
   - zipp=3.4.0
   - zlib=1.2.11
   - zstd=1.4.5
